--- a/style.css
+++ b/style.css
@@ -2,3 +2,21 @@ body
 {
     text-align: center;
 }
+
+#navbar
+{
+    text-align: right
+}
+
+.movie_head
+{
+    font-size: 20px;
+    padding: 6px 22px;
+    border-radius: 10px;
+    margin-bottom: 15px;
+}
+
+.movie_head i
+{
+    float: right;
+}
